# Second

./: CMakeLists.txt
Characters_Design&Mechanism/: Character_Design.cpp  Enginev1.cpp  Enginev2.cpp
Characters_Design&Mechanism/Character&Ghosts_resources/: ghost1.txt  ghost2.txt
Map&Objects/: Map_loading.cpp
Map&Objects/Map_Objects/: Bundle of hair.txt  book.txt  key.txt  letter.txt
Map&Objects/Map_resources/: 15-15_map.txt
UI/: base.cpp  base2.cpp  inventory.cpp  inventory2.cpp
